projects/compiler/test/typechecker/accessor/error_unnecessary_optsafe.out
Error at %FILE_NAME%:2:2
Unnecessary use of '?.' operator
  |  s?.length
      ^
(The lhs value's type here is known to be a non-Option type)
