projects/compiler/test/typechecker/accessor/error_unnecessary_optsafe.abra
val s = "abc"
s?.length